// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderText snapshots > renders empty without colour 1`] = `
"KyberDash context report
Window: last 7 days

Data coverage
  Store:      canon.db
  Refresh:    never
  Harnesses:  none in the window
  Quarantine: 0
  Problems:   0
  No session in the window. Run \`kyberdash dash refresh\` to read local harness history.
  No successful refresh recorded. Run \`kyberdash dash refresh\`.

Findings
  None in the window.

Harness dimensions
  None in the window.

Latest session
  No session in the window.

Cost
  unknown: — (no session in scope carried a cost)
"
`;

exports[`renderText snapshots > renders full without colour 1`] = `
"KyberDash context report
Window: last 7 days

Data coverage
  Store:      canon.db
  Refresh:    2026-09-19T11:00:00.000Z (1h ago)
  Harnesses:
    claude-code      detected        1 session
  Quarantine: 0
  Problems:   0

Findings
  1. Tool definitions hold 9,000 tokens across every turn
     Class:          deterministic
     Confidence:     high (resident in 14 of 14 turns, called in 0)
     Mechanism:      Four MCP servers publish their full schemas into every request, whether or not a tool from them is called.
     Evidence:       span-0d41, span-0d52
     Recoverable:    6400 tokens (5200–7600)
     Outcome risk:   Relocating schemas adds a load step the first time a tool is used in a session.
     Recommendation: Move the github and filesystem server schemas behind an on-demand skill so they load only when a tool from them is called.
     kyberdash web --view finding/finding-tool-schema-residency
  2. The same search ran four times
     Class:          deterministic
     Confidence:     high (resident in 14 of 14 turns, called in 0)
     Mechanism:      Four MCP servers publish their full schemas into every request, whether or not a tool from them is called.
     Evidence:       span-0d41, span-0d52
     Recoverable:    900 tokens (700–1200)
     Outcome risk:   Relocating schemas adds a load step the first time a tool is used in a session.
     Recommendation: Move the github and filesystem server schemas behind an on-demand skill so they load only when a tool from them is called.
     kyberdash web --view finding/finding-duplicate-grep

Harness dimensions
  claude-code
    Context Hygiene       63%
    Cache Efficiency      81%
    Tool Yield            2.4x
    Skill Utilisation     — (Telemetry missing: skill activation unobserved on this harness)
    Delegation Overhead   7%
    Continuity            — (Telemetry missing: turn outcome or correction telemetry unobserved)
  codex
    Context Hygiene       21%
    Cache Efficiency      — (Telemetry missing: harness does not export cache read/creation counters)
    Tool Yield            — (Telemetry missing: tool call residency and schema tokens unobserved)
    Skill Utilisation     — (Telemetry missing: skill activation unobserved on this harness)
    Delegation Overhead   — (Telemetry missing: no delegation events recorded or single-agent run)
    Continuity            — (Telemetry missing: turn outcome or correction telemetry unobserved)

Latest session
  sess-alpha  claude-code  kyber-weave
  Last activity: 2026-09-19T10:00:00.000Z
  Turns:         14
  kyberdash web --view session/sess-alpha
  Latest turn #14
  Pressure:      63%
  Window:        200000 tokens
  Buckets:
    System prompt          1200 tokens
    Tool definitions       9000 tokens
    Instruction context    3400 tokens
    Conversation history   81000 tokens
    Tool result content    31600 tokens
  Residual:      512 tokens
  Cache break:   no
  Tool definition sources:
    mcp-github             5100 tokens
    mcp-filesystem         2600 tokens
    mcp-fetch              1300 tokens
  Cache-invalidation turns: 9

Cost
  harness: $4.12 USD
"
`;

exports[`renderText snapshots > renders mixed-basis-cost without colour 1`] = `
"KyberDash context report
Window: last 7 days

Data coverage
  Store:      canon.db
  Refresh:    2026-09-19T11:00:00.000Z (1h ago)
  Harnesses:
    claude-code      1 session
  Quarantine: 0
  Problems:   0

Findings
  None in the window.

Harness dimensions
  claude-code
    Context Hygiene       63%
    Cache Efficiency      81%
    Tool Yield            2.4x
    Skill Utilisation     — (Telemetry missing: skill activation unobserved on this harness)
    Delegation Overhead   7%
    Continuity            — (Telemetry missing: turn outcome or correction telemetry unobserved)

Latest session
  sess-alpha  claude-code  kyber-weave
  Last activity: 2026-09-19T10:00:00.000Z
  Turns:         14
  kyberdash web --view session/sess-alpha
  Latest turn #0
  Pressure:      — (harness exported no message structure for this session)
  Window:        — (harness exported no message structure for this session)
  Buckets:
    System prompt          — (harness exported no message structure for this session)
    Tool definitions       — (harness exported no message structure for this session)
    Instruction context    — (harness exported no message structure for this session)
    Conversation history   — (harness exported no message structure for this session)
    Tool result content    — (harness exported no message structure for this session)
  Residual:      — (harness exported no message structure for this session)
  Cache break:   no

Cost
  harness: $4.12 USD
  published: $3.87 USD
  unknown: — (no priced record on this basis (no_rate))
"
`;

exports[`renderText snapshots > renders no-findings without colour 1`] = `
"KyberDash context report
Window: last 7 days

Data coverage
  Store:      canon.db
  Refresh:    2026-09-19T11:00:00.000Z (1h ago)
  Harnesses:
    claude-code      1 session
  Quarantine: 0
  Problems:   0

Findings
  None in the window.

Harness dimensions
  claude-code
    Context Hygiene       63%
    Cache Efficiency      81%
    Tool Yield            2.4x
    Skill Utilisation     — (Telemetry missing: skill activation unobserved on this harness)
    Delegation Overhead   7%
    Continuity            — (Telemetry missing: turn outcome or correction telemetry unobserved)

Latest session
  sess-alpha  claude-code  kyber-weave
  Last activity: 2026-09-19T10:00:00.000Z
  Turns:         14
  kyberdash web --view session/sess-alpha
  Latest turn #14
  Pressure:      63%
  Window:        200000 tokens
  Buckets:
    System prompt          1200 tokens
    Tool definitions       9000 tokens
    Instruction context    3400 tokens
    Conversation history   81000 tokens
    Tool result content    31600 tokens
  Residual:      512 tokens
  Cache break:   no
  Tool definition sources:
    mcp-github             5100 tokens
    mcp-filesystem         2600 tokens
    mcp-fetch              1300 tokens
  Cache-invalidation turns: 9

Cost
  unknown: — (no session in scope carried a cost)
"
`;

exports[`renderText snapshots > renders stale without colour 1`] = `
"KyberDash context report
Window: last 7 days

Data coverage
  Store:      canon.db
  Refresh:    2026-09-17T10:00:00.000Z (2d ago)
  Last fail:  2026-09-19T10:00:00.000Z: 2 of 6 source job(s) failed
  Harnesses:
    claude-code      1 session
  Quarantine: 0
  Problems:   0
  Last successful refresh was 2026-09-17T10:00:00.000Z. Run \`kyberdash dash refresh\`.

Findings
  None in the window.

Harness dimensions
  claude-code
    Context Hygiene       63%
    Cache Efficiency      81%
    Tool Yield            2.4x
    Skill Utilisation     — (Telemetry missing: skill activation unobserved on this harness)
    Delegation Overhead   7%
    Continuity            — (Telemetry missing: turn outcome or correction telemetry unobserved)

Latest session
  sess-alpha  claude-code  kyber-weave
  Last activity: 2026-09-17T10:00:00.000Z
  Turns:         14
  kyberdash web --view session/sess-alpha
  Latest turn #0
  Pressure:      — (harness exported no message structure for this session)
  Window:        — (harness exported no message structure for this session)
  Buckets:
    System prompt          — (harness exported no message structure for this session)
    Tool definitions       — (harness exported no message structure for this session)
    Instruction context    — (harness exported no message structure for this session)
    Conversation history   — (harness exported no message structure for this session)
    Tool result content    — (harness exported no message structure for this session)
  Residual:      — (harness exported no message structure for this session)
  Cache break:   no

Cost
  unknown: — (no session in scope carried a cost)
"
`;

exports[`renderText snapshots > renders unmeasurable-pressure without colour 1`] = `
"KyberDash context report
Window: last 7 days

Data coverage
  Store:      canon.db
  Refresh:    2026-09-19T11:00:00.000Z (1h ago)
  Harnesses:
    cursor           1 session
  Quarantine: 0
  Problems:   0

Findings
  None in the window.

Harness dimensions
  cursor
    Context Hygiene       — (Telemetry missing: context composition not recorded)
    Cache Efficiency      81%
    Tool Yield            2.4x
    Skill Utilisation     — (Telemetry missing: skill activation unobserved on this harness)
    Delegation Overhead   7%
    Continuity            — (Telemetry missing: turn outcome or correction telemetry unobserved)

Latest session
  sess-alpha  cursor  kyber-weave
  Last activity: 2026-09-19T10:00:00.000Z
  Turns:         14
  kyberdash web --view session/sess-alpha
  Latest turn #0
  Pressure:      — (harness exported no message structure for this session)
  Window:        — (harness exported no message structure for this session)
  Buckets:
    System prompt          — (harness exported no message structure for this session)
    Tool definitions       — (harness exported no message structure for this session)
    Instruction context    — (harness exported no message structure for this session)
    Conversation history   — (harness exported no message structure for this session)
    Tool result content    — (harness exported no message structure for this session)
  Residual:      — (harness exported no message structure for this session)
  Cache break:   no

Cost
  unknown: — (no session in scope carried a cost)
"
`;
